初期設定修正

--- a/cms/docker-compose.yml
+++ b/cms/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - .:/var/opt/app
     environment:
       - "TZ=Japan"
+      - "DB_HOST=cms-db"
     links:
       - mysql:mysql
     ports:
