--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,28 @@
-elixir: &defaults
-  image: elixir:latest
-  working_dir: /app
-  volumes:
-    - .:/app
-  entrypoint: ["elixir"]
-iex:
-  <<: *defaults
-  entrypoint: ["iex"]
-mix:
-  <<: *defaults
-  entrypoint: ["mix"]
+version: '3'
+services:
+  storage:
+    image: busybox
+    volumes:
+      - /var/lib/mysql
+    container_name: unknown-storage
+  mysql:
+    image: mysql:5.6
+    volumes:
+      - storage
+    ports:
+      - "3306:3306"
+    container_name: unknown-db
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+  app:
+      build: .
+      volumes:
+        - .:/var/opt/app
+      environment:
+        - "TZ=Japan"
+#        - "DB_HOST=unknown-db"
+      links:
+        - mysql:mysql
+      ports:
+        - "4000:4000"
+      container_name: unknown-web
