--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
     steps:
       - checkout
+      - run: cd src
+      - run: pwd
       - run: mix local.hex --force
       - run: mix local.rebar
       - run: mix deps.get
