--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
       - checkout
       - run: cd src
       - run: pwd
+      - run: ll
       - run: mix local.hex --force
       - run: mix local.rebar
       - run: mix deps.get
