--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/cci-phoenix/src
+    working_directory: ~/cci-phoenix
     docker:
       - image: elixir:1.6.0
       - image: mysql:5.6
@@ -9,8 +9,8 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
     steps:
       - checkout
-      - run: pwd
-      - run: ls -la
+      - run: cd src & pwd
+      - run: cd src & ls -la
       - run: mix local.hex --force
       - run: mix local.rebar
       - run: mix deps.get
