--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,8 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
     steps:
       - checkout
-      - run: cd src & pwd
-      - run: cd src & ls -la
+      - run: (cd src & pwd)
+      - run: (cd src & ls -la)
       - run: mix local.hex --force
       - run: mix local.rebar
       - run: mix deps.get
