--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
           MYSQL_ALLOW_EMPTY_PASSWORD: "true"
     steps:
       - checkout
-      - run: (cd src & pwd)
-      - run: (cd src & ls -la)
       - run: mix local.hex --force
       - run: mix local.rebar
-      - run: mix deps.get
+      - run:
+        working_directory: ~/cci-phoenix/src
+        command: mix deps.get
       - run: DB_HOST=localhost mix test
