--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,5 @@ jobs:
       - checkout
       - run: mix local.hex --force
       - run: mix local.rebar
-      - run:
-        name: deps.get
-        working_directory: ~/cci-phoenix/src
-        command: mix deps.get
-      - run: DB_HOST=localhost mix test
+      - run: cd src ; mix deps.get
+      - run: cd src ; DB_HOST=localhost mix test
