--- a/src/apps/data_store/config/prod.secret.exs.dist
+++ b/src/apps/data_store/config/prod.secret.exs.dist
@@ -6,6 +6,6 @@ config :data_store,
        adapter: Ecto.Adapters.MySQL,
        username: System.get_env("DB_USER"),
        password: System.get_env("DB_PASSWORD"),
-       database: System.get_env("DB_HOST"),
+       database: "data_store_repo",
        hostname: System.get_env("DB_HOST"),
        pool_size: 10
