--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-      build: ""
+      build: ./.docker
       volumes:
         - ./src:/var/opt/app
       environment:
